; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-windows.c_find_libobs_data_file.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-windows.c_find_libobs_data_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dstr = type { i8* }

@.str = private unnamed_addr constant [13 x i8] c"data/libobs/\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"../../data/libobs/\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @find_libobs_data_file(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.dstr, align 8
  store i8* %0, i8** %3, align 8
  %5 = call i32 @dstr_init(%struct.dstr* %4)
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @check_path(i8* %6, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), %struct.dstr* %4)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = getelementptr inbounds %struct.dstr, %struct.dstr* %4, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  store i8* %11, i8** %2, align 8
  br label %21

12:                                               ; preds = %1
  %13 = load i8*, i8** %3, align 8
  %14 = call i64 @check_path(i8* %13, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), %struct.dstr* %4)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %12
  %17 = getelementptr inbounds %struct.dstr, %struct.dstr* %4, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  store i8* %18, i8** %2, align 8
  br label %21

19:                                               ; preds = %12
  %20 = call i32 @dstr_free(%struct.dstr* %4)
  store i8* null, i8** %2, align 8
  br label %21

21:                                               ; preds = %19, %16, %9
  %22 = load i8*, i8** %2, align 8
  ret i8* %22
}

declare dso_local i32 @dstr_init(%struct.dstr*) #1

declare dso_local i64 @check_path(i8*, i8*, %struct.dstr*) #1

declare dso_local i32 @dstr_free(%struct.dstr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
